--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ document.addEventListener("DOMContentLoaded", function() {
   });
 });
 </script>
-<h2>Ders Notları - Ağaç Görünümü</h2>
+<h2>Ders Notları</h2>
 <ul class="tree">
 <li>
   <span class="caret"><span class="symbol">▶</span> 1.sınıf</span>
