--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <pre>Bu sayfa iücjeofizik.com web sitesinde paylaşılıcak olan sanal kütüphaneyi barındırmak için kurulmuştur.
 Ders notlarına daha rahat erişim için lütfen web sitesini kullanın 
 
+Sansüre hayır !!!!!
+  
 www.iücjeofizik.com
 </pre>
 </div>
